--- a/index.htm
+++ b/index.htm
@@ -171,7 +171,7 @@
         <p>🧱 Show your creativity and building skills in our epic SMP Build Event!</p>
         <p>🏆 Winner gets an exclusive in-game reward and Discord role.</p>
         <p>📅 Date: 3rd of August 2025</p>
-        <p>⏰ Time : 12:00 am to 5:am </p>
+        <p>⏰ Time : 12:00 am to 5:00 am </p>
         <p>⏰ Time Limit: 5 Hours</p>
         <p>🎨 Theme: No theme just pure creativity and (nature things bhi add kr sakte ho</p>
         <p>📌 Rules:</p>
@@ -201,7 +201,7 @@
         <input type="text" id="username" placeholder="Your Name / Discord Username" required />
         <input type="text" id="ign" placeholder="Minecraft IGN" required />
         <input type="number" id="age" placeholder="Your Age" required />
-        <textarea id="reason" placeholder="Why do you want to join?" rows="4" required></textarea>
+        <textarea id="Country Name . eg India" placeholder="Why do you want to join?" rows="4" required></textarea>
         <button type="submit">✅ Submit</button>
       </form>
       <button style="margin-top: 15px;" onclick="showInfo()">← Back to Info</button>
@@ -252,7 +252,7 @@
               { name: "Username", value: username, inline: true },
               { name: "Minecraft IGN", value: ign, inline: true },
               { name: "Age", value: age, inline: true },
-              { name: "Reason", value: reason }
+              { name: "Country name", value: reason }
             ],
             footer: { text: "Cyclone SMP Registration System" },
             timestamp: new Date()
