--- a/index.htm
+++ b/index.htm
@@ -201,7 +201,7 @@
         <input type="text" id="username" placeholder="Your Name / Discord Username" required />
         <input type="text" id="ign" placeholder="Minecraft IGN" required />
         <input type="number" id="age" placeholder="Your Age" required />
-        <textarea id="Country Name . eg India" placeholder="Why do you want to join?" rows="4" required></textarea>
+        <textarea id="Country name" placeholder="Country Name ? . eg India" rows="4" required></textarea>
         <button type="submit">✅ Submit</button>
       </form>
       <button style="margin-top: 15px;" onclick="showInfo()">← Back to Info</button>
