--- a/index.htm
+++ b/index.htm
@@ -164,8 +164,10 @@
   <div class="container">
     <!-- Page 1: Info -->
     <div id="infoPage" class="page active">
+      <h1>15 seats remain</h1>
       <h1>🌪️ Cyclone SMP Build Event</h1>
       <p class="subtitle">Hosted by Cyclone SMP</p>
+      <p>Read all info & Scroll to bottom to unlock registration 👇</p>
       <div class="info-content" id="infoScrollBox">
         <p>🧱 Show your creativity and building skills in our epic SMP Build Event!</p>
         <p>🏆 Winner gets an exclusive in-game reward and Discord role.</p>
@@ -188,7 +190,6 @@
           </ul>
         </div>
         <p style="margin-top: 20px;">💬 Contact staff if you have any questions!</p>
-        <p>Scroll to bottom to unlock registration 👇</p>
       </div>
       <button id="registerBtn" class="hidden-btn" onclick="showForm()">🚀 Register Now</button>
     </div>
