--- a/index.htm
+++ b/index.htm
@@ -171,9 +171,9 @@
       <div class="info-content" id="infoScrollBox">
         <p>🧱 Show your creativity and building skills in our epic SMP Build Event!</p>
         <p>🏆 Winner gets an exclusive in-game reward and Discord role.</p>
-        <p>📅 Date: 15th August 2025</p>
-        <p>⏰ Time Limit: 3 Hours</p>
-        <p>🎨 Theme: Nature + Fantasy</p>
+        <p>📅 Date: 3rd of August 2025</p>
+        <p>⏰ Time Limit: 5 Hours 12 am to 5 am</p>
+        <p>🎨 Theme: Random Buld what u want but with natural things getting it</p>
         <p>📌 Rules:</p>
         <ul>
           <li>Solo participation only</li>
