--- a/index.htm
+++ b/index.htm
@@ -172,7 +172,7 @@
         <p>🧱 Show your creativity and building skills in our epic SMP Build Event!</p>
         <p>🏆 Winner gets an exclusive in-game reward and Discord role.</p>
         <p>📅 Date: 3rd of August 2025</p>
-        <p>⏰ Time Limit: 5 Hours 12 am to 5 am</p>
+        <p>⏰ Time Limit: 5 Hours 12 pm to 5 pm</p>
         <p>🎨 Theme: Random Buld what u want but with natural things getting it</p>
         <p>📌 Rules:</p>
         <ul>
