--- a/index.htm
+++ b/index.htm
@@ -180,6 +180,7 @@
           <li>No external building mods or hacks</li>
           <li>Judging based on creativity & detail</li>
           <li>Respect staff and other players</li>
+          <li>Game Mode Creative</li>
         </ul>
         <div class="rewards">
           <h3>🏆 Winner Rewards</h3>
