--- a/index.htm
+++ b/index.htm
@@ -170,7 +170,7 @@
       <p>Read all info & Scroll to bottom to unlock registration 👇</p>
       <div class="info-content" id="infoScrollBox">
         <p>🧱 Show your creativity and building skills in our epic SMP Build Event!</p>
-        <p>🏆 Winner gets an exclusive in-game reward and Discord role.</p>
+        <p>🏆 Winner gets an exclusive real life money reward and Discord role.</p>
         <p>📅 Date: 3rd of August 2025</p>
         <p>⏰ Time Limit: 5 Hours 12 pm to 5 pm</p>
         <p>🎨 Theme: Random Buld what u want but with natural things getting it</p>
