--- a/index.htm
+++ b/index.htm
@@ -164,7 +164,7 @@
   <div class="container">
     <!-- Page 1: Info -->
     <div id="infoPage" class="page active">
-      <h1>4 seats remain</h1>
+      <h1>2 seats seats remain</h1>
       <h1>🌪️ Cyclone SMP Build Event</h1>
       <p class="subtitle">Hosted by Cyclone SMP</p>
       <p>Read all info & Scroll to bottom to unlock registration 👇</p>
