--- a/index.htm
+++ b/index.htm
@@ -173,7 +173,7 @@
         <p>🏆 Winner gets an exclusive real life money reward and Discord role.</p>
         <p>📅 Date: 3rd of August 2025</p>
         <p>⏰ Time Limit: 5 Hours 12 pm to 5 pm</p>
-        <p>🎨 Theme: Random Buld what u want but with natural things getting it</p>
+        <p>🎨 Theme: Random Build what u want but also include nature in it </p>
         <p>📌 Rules:</p>
         <ul>
           <li>Solo participation only</li>
